# gmtui

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  roadmap.md
src/: app.rs  config.rs  error.rs  events.rs  lib.rs  main.rs  state.rs  theme.rs  ui.rs
src/components/: composer.rs  email_view.rs  inbox.rs  mod.rs  search.rs  sidebar.rs  status_bar.rs
src/gmail/: auth.rs  client.rs  mod.rs  models.rs
tests/: config_tests.rs  inbox_tests.rs  search_tests.rs
